<package format="3">
  <name>ais</name>
  <version>0.2.0</version>
  <description>
  This package provides libais for use in ROS2.
  </description>

  <maintainer email="michael.kim@chancemaritime.com">Michael Kim</maintainer>
  <license>MIT</license>
  <author>Davide Faconti</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

<export>
  <build_type>ament_cmake</build_type>
</export>

</package>
